<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_user_menu"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/rides"
            android:icon="@drawable/my_trips_menu"
            android:title="My Trips" />

        <item
            android:id="@+id/payments"
            android:icon="@drawable/ic_payments_menu"
            android:title="Payment"
            />

        <item
            android:id="@+id/wallet"
            android:icon="@drawable/ic_wallet_menu"
            android:title="@string/nav_wallet"
            />

        <item
            android:id="@+id/invite_friends"
            android:icon="@drawable/ic_invite_menu"
            android:title="Invite Friends" />

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications_menu"
            android:title="@string/notifications" />

        <item
            android:id="@+id/account_settings"
            android:icon="@drawable/ic_settings_menu"
            android:title="Settings" />

        <item
            android:visible="false"
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_menu"
            android:title="@string/about" />
        <item
            android:visible="false"
            android:id="@+id/info"
            android:icon="@drawable/info"
            android:title="@string/info" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_nav"
            android:title="@string/logout" />
    </group>
</menu>