<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellowColor"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/grey3"
            android:hint="@string/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/close"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/done"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>