<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/get_in_touch"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/always_within_your_reach"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/first_name"
                    android:textColor="@color/grey3"
                    android:inputType="text"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/last_name"
                    android:textColor="@color/grey3"
                    android:inputType="text"
                    android:singleLine="true"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:textColor="@color/grey3"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"/>

                <EditText
                    android:id="@+id/edtMobileNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/grey3"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:singleLine="true"/>
            </LinearLayout>

            <EditText
                android:id="@+id/edtQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="top|left"
                android:hint="@string/please_enter_your_query_here"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColor="@color/grey3"
                android:maxLines="5"
                android:minLines="5"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:background="@color/yellowColor"
                android:text="@string/send"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
