<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellowColor"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_location_title"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:clickable="true"
            android:focusable="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/txtWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_location_title"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/close"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>