<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_redeem_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.muvit.passenger.Activities.RedeemRequestActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/light_grey"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/available_balance"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/txtAvailableBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0"
                    android:text="₦30"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:drawableRight="@drawable/edit_profile"
                    android:hint="@string/email"
                    android:textColor="@color/grey3"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/amount"
                    android:textColor="@color/grey3"
                    android:inputType="number"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="top|left"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textColor="@color/grey3"
                    android:maxLines="5"
                    android:minLines="5"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/yellowColor"
                android:text="@string/submit"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
