<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deposit_fund"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.muvit.passenger.Activities.DepositFundActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/light_grey"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/available_balance"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/txtAvailableBal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0"
                    android:text="₦30"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/information"
                    android:text="@string/deposit_fund_instructions" />

                <EditText
                    android:id="@+id/edtDepositAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_deposit_amount"
                    android:textColor="@color/grey3"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellowColor">
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:src="@drawable/paypal"-->
                    <!--android:padding="15dp"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="PAY"
                    android:padding="15dp"
                    android:textSize="25sp"/>
            </RelativeLayout>

            <!--<Button
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/yellowColor"
                android:text="PayPal"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
